# cnn_classifier

./: README.md  pyproject.toml
cnn_classifier/: bricksvsrebars-0.0005-6conv-basic.model.index  bricksvsrebars-0.001-6conv-basic.model.index  checkpoint  model.py  preprocess.py
cnn_classifier/log/bricksvsrebars-0.0005-6conv-basic.model/: events.out.tfevents.1664426487.debian  events.out.tfevents.1664428407.debian
cnn_classifier/log/bricksvsrebars-0.001-6conv-basic.model/: events.out.tfevents.1664342557.debian  events.out.tfevents.1664342755.debian  events.out.tfevents.1664342905.debian  events.out.tfevents.1664343131.debian  events.out.tfevents.1664343654.debian  events.out.tfevents.1664344400.debian  events.out.tfevents.1664344673.debian  events.out.tfevents.1664344797.debian  events.out.tfevents.1664345361.debian  events.out.tfevents.1664345742.debian  events.out.tfevents.1664351825.debian  events.out.tfevents.1664352084.debian  events.out.tfevents.1664352160.debian  events.out.tfevents.1664352201.debian  events.out.tfevents.1664353319.debian  events.out.tfevents.1664354029.debian
tests/: test_cnn_classifier.py
