[tool.poetry]
name = "cnn_classifier"
version = "0.1.0"
description = "Image Classifier using CNN"
authors = ["Vishnu S Menon <ce19b103>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tqdm = "^4.64.1"
opencv-python = "^4.6.0.66"
tflearn = "^0.5.0"
tensorflow = "^2.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
